wwr/styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Comfortaa&display=swap');

#content {
    max-width: 1600px;
    margin: 0 auto;
}

#logo_link {
    padding-top: 5px;
    justify-self: center;
    align-self: center;
}

.logo {
    width: 80px;
}

nav {
    display: flex;
    justify-content: space-around;
}

nav a {
    text-align: center;
    color:#FFECD1;
    text-decoration: none;
    padding: 35px;
}

nav a:hover {
    background-color: #FFECD1;
    color:#001524;
}

#hero {
    display: grid;
    grid-template-columns: 1fr 3fr 1fr;
    margin-top: -100px;
}

#hero-box {
    grid-column: 1/4;
    grid-row: 1/3;
    z-index: -1;
}

#hero-img {
    width: 100%;
}

#hero-msg {
    grid-column: 2/3;
    grid-row: 1/2;
    margin-top: 100px;
}

#hero-msg h1, #hero-msg h4 {
    text-align: center;
}

.button-box {
    text-align: center;
}

.home-grid {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
}

main section {
    text-align: center; 
}

main section img {
    box-sizing: border-box;
}

#background {
    height: 725px;
    background-color: white;
    grid-column: 1/11;
    grid-row: 4/9;
}

body {
    background-color: #FFECD1;
    font-family: Comfortaa, Arial, sans-serif;
    font-size: 22px;
    margin: 0;
    padding: 0;
}

header {
    background-color: #001524;
    display:grid;
    grid-template-columns: 150px auto;
}

.book, .join {
    background-color:#78290F;
    color:#FFECD1;
    text-decoration: none;
    font-size: 18px;
    padding: 15px 30px;
    margin-top: 50px;
    border-radius: 5px;
}

.book:hover, .join:hover {
    background-color: #15616D;
    color:#FF7D00;
}

.msg {
    background-color:#78290F;
    line-height: 1.5em;
    padding: 35px;
    grid-column: 6/10;
    grid-row: 6/7;
    box-shadow: 5px 5px 10px #6f7364;
}

.msg h2 {
    color:#001524;
    font-family: Bebas Neue, Helvetica, sans-serif;
    margin: 0;
}

.msg p {
    color:#FFECD1;
    font-size: .8em;
    padding-bottom: 15px;
}

footer {
    background-color: #001524;
    padding: 25px 50px;
    margin-top: 200px;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

footer h3 {
    color:#78290F;
}

footer a {
    color:#FFECD1;
    text-decoration: none;
}

footer a:hover {
    color:#FF7D00;
}

footer p {
    font-size: 1.2em;
}

footer p a:hover {
    text-decoration: underline;
}

footer .social img {
    padding-top: 15px;
}

.icon {
    width: 80px;
    padding-top: 10px;
}

.home-title {
    color:#15616D;
    font-family: Bebas Neue, Helvetica, sans-serif;
    font-size: 2em;
    margin-top: 10px;
}

h4 {
    color:#FFECD1;
}

.rivers-card, .camping-card, .rapids-card {
    margin: 200px 0;
}

.card-img {
    border: 10px solid black;
    transition: transform .5s;
    box-shadow: 5px 5px 10px #6f7364;
    width: 100%;
}

.card-img:hover {
    opacity: .6;
    transform: scale(1.1);
}

.rivers-card {
    grid-column: 2/4;
    grid-row: 2/3;
}

.camping-card {
    grid-column: 5/7;
    grid-row: 2/3;
}

.rapids-card {
    grid-column: 8/10;
    grid-row: 2/3;
}

.mountains {
    width: 100%;
    grid-column: 2/7;
    grid-row: 5/8;
    box-shadow: 5px 5px 10px #6f7364;
}

.rates-grid {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr 1fr;
}

.rates-title {
    color:#15616D;
    font-family: Bebas Neue, Helvetica, sans-serif;
    font-size: 2em;
    margin-top: 10px; 
}

#rates-msg {
    text-align: center;
    margin: 30px;
}

.grandcanyon-img {
    grid-column: 1/2;
    grid-row: 1/2;
    margin: 50px;
}

.grandcanyon-msg {
    grid-column: 2/3;
    grid-row: 1/2;
    margin: 50px;
}

.grandcanyon2-img {
    grid-column: 2/3;
    grid-row: 2/3;
    margin: 50px;
}

.grandcanyon2-msg {
    grid-column: 1/2;
    grid-row: 2/3;
    margin: 50px;
}

.salmonriver-img {
    grid-column: 1/2;
    grid-row: 3/4;
    margin: 50px;
}

.salmonriver-msg {
    grid-column: 2/3;
    grid-row: 3/4;
    margin: 50px;
}

.desolation-img {
    grid-column: 2/3;
    grid-row: 4/5;
    margin: 50px;
}

.desolation-msg {
    grid-column: 1/2;
    grid-row: 4/5;
    margin: 50px;
}

h5 {
    color:#15616D;
    font-family: Bebas Neue, Helvetica, sans-serif;
    font-size: 2em; 
}

#small {
    font-family: Comfortaa, Arial, sans-serif;
    font-size: 1em;
}

@media screen and (max-width: 900px) {
    #hero, .home-grid, .rates-grid {
        display: block;
        height: auto;
    }
    nav, footer {
        flex-direction: column;
    }
    nav a {
        display: block;
        padding: 15px;
    }
    #hero {
        margin-top: 0;
    }
    #hero-msg {
        margin-top: 0;
    }
    #hero-msg h4 {
        display: none;
    }
    .home-title, .rates-title {
        font-size: 25px;
        color: #6f7364;
    }
    .rivers-card, .camping-card, .rapids-card { 
        margin: 50px auto;
        width: 60%;
    }
    #background {
        display: none;
    }
    .mountains, .msg {
        width: 80%;
        display: block;
        margin: 0 auto;
    }
    .grandcanyon-pic, .salmonriver-pic, .desolation-pic, .grandcanyon-txt, .salmonriver-txt, .desolation-txt {
        width: 60%;
        margin: 50px;
    }
    footer {
        margin-top: 25px;
    }
}

